part2/config/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    app: portainer
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 9000   
  type: ClusterIP
