part2/config/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: http-server
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 80   
  type: ClusterIP
