part2/config/app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 3000   
  type: ClusterIP
